--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: pricehunt-scraper
     runtime: python
-    buildCommand: pip install -r requirements.txt && playwrite install
+    buildCommand: |
+      pip install -r requirements.txt
+      python -m playwright install --with-deps
     startCommand: python app.py
     plan: free
