--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,9 @@ services:
     runtime: python
     buildCommand: |
       pip install -r requirements.txt
-      python -m playwright install --with-deps
+      python -m playwright install chromium
     startCommand: python app.py
     plan: free
+    envVars:
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /tmp/playwright
