--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,5 @@ services:
     runtime: python
     buildCommand: |
       pip install -r requirements.txt
-      python -m playwright install --with-deps
-    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    startCommand: python app.py
     plan: free
-    envVars:
-      - key: PLAYWRIGHT_BROWSERS_PATH
-        value: /opt/render/project/.cache/playwright
